# unibo-progetti-appunti

./: README.md
Appunti/: README.md
Appunti/Basi di Dati/: Basi di Dati.odt
Appunti/Decisioni e Processi Cognitivi in Ambienti di Rete/: Decisioni e Processi Cognitivi in Ambienti di Rete.odt
Appunti/Finanza Aziendale/: Finanza Aziendale.odt
Appunti/Sicurezza/: Sicurezza.odt
Appunti/Storia dell'Informatica/: Storia dell’Informatica.odt
Magistrale/Appunti/Compilatori e Interpreti/: Compilatori e Interpreti.odt
Magistrale/Appunti/Emerging Programming Paradigms/:  3 Emerging Programming Paradigms [23-25 marzo] Accesso a Bit, Hot-Swap, Concorrenza, Linking.docx  1 Emerging Programming Paradigms [02-04-09-11 marzo] Introduzione Erlang, Rappresentazione Dati in Memoria, Garbage Collection, costrutto Case.docx  10 Emerging Programming Paradigms [06-11 maggio] go.docx  11 Emerging Programming Paradigms [11 maggio] rust, traits, haskell.docx  12 Emerging Programming Paradigms [13 maggio] monadi.docx  13 Emerging Programming Paradigms [18-20 maggio] Rust.docx  2 Emerging Programming Paradigms [16-18 marzo] Tail Recusion, Gestione Eccezioni.docx  4 Emerging Programming Paradigms [30 marzo - 01 aprile] Parallelismo, Porte, Distribuzione, ETS, Multitasking, Blockchain.docx  5 Emerging Programming Paradigms [06-08-15 aprile] futues-promises, chiusure.docx  Definizioni.docx  Domande.docx  (+7 more)
Magistrale/Progetti/Grafica/Es2/: CMakeLists.txt  main.cpp
Magistrale/Progetti/Grafica/Es3/: CMakeLists.txt  main.cpp
Magistrale/Progetti/Grafica/Es5/Ray Tracing/: CMakeLists.txt  Launcher.bat  boundingbox.cpp  camera.cpp  glCanvas.cpp  glCanvas.h  main.cpp  material.cpp  matrix.cpp  mesh.cpp  radiosity.cpp  raytracer.cpp  raytracer.h  raytree.cpp  raytree.h  sphere.cpp  vectors.h
Magistrale/Progetti/Grafica/Es7/: CMakeLists.txt  main.cpp  main.h
Magistrale/Progetti/Grafica/Es7/Shaders/: f_normal_map.glsl  f_passthrough.glsl  f_reflection.glsl  f_refraction.glsl  f_skybox.glsl  f_texture.glsl  v_normal_map.glsl  v_passthrough.glsl  v_reflection.glsl  v_skybox.glsl  v_texture.glsl
Progetti/Algoritmi Strutture Dati 1/: README.md
Progetti/Algoritmi Strutture Dati 2/: README.md
Progetti/Basi di Dati/: README.md
Progetti/Ingegneria del Software/: DOCS.md  README.md  SPECS.md
Progetti/Laboratorio Applicazioni Mobili/: README.md
Progetti/Programmazione Internet 1/: README.md
Progetti/Sistemi Operativi/: README.md
Triennale/Appunti/: README.md
(+3435 files in other folders)
